syntax = "proto3";
package types;
option go_package = "github.com/kysee/arcanus/ctrlers/types";

message GovRuleProto {
  int64 version = 1;
  int64 max_validator_cnt = 2;
  bytes _amount_per_power = 3;
  bytes _reward_per_power = 4;
  int64 lazy_reward_blocks = 5;
  int64 lazy_applying_blocks = 6;
  bytes _min_trx_fee = 7;
  int64 min_voting_period_blocks = 8;
  int64 max_voting_period_blocks = 9;
}